bluec-tests/tests/invalid/types_longdouble/missing_negative_exponent.c
int main(void) {
    /* The exponent on a floating-point constant must be an integer,
     * not just a negative sign.
     */
    long double foo = 24e-L;
}